2005-10-06  Dom Lachowicz <cinamod@hotmail.com>

	* autogen.sh: Let librsvg build out of srcdir. Bug #158331
	* test-display.c: Populate save dialogs with the SVG's name. Bug #318010.
	* configure.in: Ditto
	* rsvg-structure: Related to bug #318025, don't set has_width or has_height unless they are > 0.
	
2005-10-06  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-paint-server.c: Backport Caleb's patch to 317871, fixing a crash
	inside of libart for some gradients.
	* rsvg-art-paint-server.c: Ditto

2005-10-04  Dom Lachowicz <cinamod@hotmail.com>
	
	* rsvg-shapes.c: Fix problems in non-C locales. Bug #317615
	* configure.in: 2.12.5
	
2005-10-01  Dom Lachowicz <cinamod@hotmail.com>

	* configure.in: 2.12.4
	* gdk-pixbuf-loader/io-svg.c: Because bug 308021 was fixed, and bug 317225 still
	exists (although possibly not within librsvg itself), I've re-enabled a match for
	"<?xml", with a priority of "1".
	
2005-10-01  Dom Lachowicz <cinamod@hotmail.com>

	* configure.in: bug 314593, support firefox-config
	
2005-09-29  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-filter.c: Fix bug #317549
	* configure.in: 2.12.3
	
2005-09-25  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg.c: Bug 309660 - signedness issues
	* configure.in: 2.12.2
	
2005-09-25  Dom Lachowicz <cinamod@hotmail.com>

	* 2.12.1
	
	* rsvg-structure.c:
	* rsvg-shapes.c: Bug 371148 - C89 fixes

	* gdk-pixbuf-loader/Makefile.am
	* gtk-engine/Makefile.am: Bug 316803 - Win32 mingw build fixes

	* moz-plugin/Makefile.am: Bug 316588 - add glib cflags to INCLUDES

	* librsvg.spec.in: Backport from HEAD branch
	
2005-09-22  Rodney Dawes  <dobey@novell.com>

	* configure.in: GNOME_REQUIRE_PKGCONFIG doesn't exist, so remove it
	so that we don't get a weird warning when running configure

2005-09-16  Dom Lachowicz <cinamod@hotmail.com>

	* gdk-pixbuf-loader/io-svg.c: Scan the first 1024 chars for <svg. 100
	Wasn't sufficient for a lot of icon themes.

2005-09-15  Dom Lachowicz <cinamod@hotmail.com>

	* 2.12.0
	