@@ -3,7 +3,8 @@
 	* autogen.sh: Let librsvg build out of srcdir. Bug #158331
 	* test-display.c: Populate save dialogs with the SVG's name. Bug #318010.
 	* configure.in: Ditto
-	* rsvg-structure: Related to bug #318025, don't set has_width or has_height unless they are > 0.
+	* rsvg-structure.c: Related to bug #318025, don't set has_width or has_height unless they are > 0.
+	* rsvg.c: Bug #168567, mega hack to make multiImage sort-of work.
 	
 2005-10-06  Dom Lachowicz <cinamod@hotmail.com>
 
